--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
+attrs==21.2.0
+certifi==2021.10.8
+charset-normalizer==2.0.7
 click==8.0.3
+flake8==4.0.1
 Flask==2.0.2
+idna==3.3
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
+mccabe==0.6.1
 nulltype==2.3.1
-plaid-python==8.4.0
+packaging==21.0
+pluggy==1.0.0
+py==1.10.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pyparsing==3.0.1
+pytest==6.2.5
+pytest-ordering==0.6
 python-dateutil==2.8.2
+PyYAML==6.0
+requests==2.26.0
 six==1.16.0
+toml==0.10.2
 urllib3==1.26.7
 Werkzeug==2.0.2
